--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,15 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/chambers?&serverTimezone=UTC&characterEncoding=UTF-8&useSSL=false
+
 spring.datasource.username=uatilman
-spring.datasource.password=
+spring.datasource.password=juDE1298
+
+#spring.datasource.username=root
+#spring.datasource.password=juDE#8538tefaltron
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.data.jpa.repositories.enabled=true
-welcome.message:Hello Mkyong
+
+
+welcome.message:Property message
