--- a/pom.xml
+++ b/pom.xml
@@ -22,9 +22,26 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
+        <!--<thymeleaf.version>3.0.6.RELEASE</thymeleaf.version>-->
+        <!--<thymeleaf-layout-dialect.version>2.2.2</thymeleaf-layout-dialect.version>-->
     </properties>
 
     <dependencies>
+
+        <!--        &lt;!&ndash; https://mvnrepository.com/artifact/org.thymeleaf/thymeleaf-spring4 &ndash;&gt;
+                <dependency>
+                    <groupId>org.thymeleaf</groupId>
+                    <artifactId>thymeleaf-spring4</artifactId>
+                    <version>${thymeleaf.version}</version>
+                </dependency>
+
+                &lt;!&ndash; https://mvnrepository.com/artifact/org.thymeleaf/thymeleaf &ndash;&gt;
+                <dependency>
+                    <groupId>org.thymeleaf</groupId>
+                    <artifactId>thymeleaf</artifactId>
+                    <version>${thymeleaf.version}</version>
+                </dependency>-->
+
 
         <!--my code-->
         <dependency>
