--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/chambers?&serverTimezone=UTC&characterEncoding=UTF-8&useSSL=false
 
 spring.datasource.username=uatilman
-spring.datasource.password=juDE1298
+#spring.datasource.password=juDE1298
+spring.datasource.password=tefaltron#1juDE
 
 #spring.datasource.username=root
 #spring.datasource.password=juDE#8538tefaltron
@@ -12,4 +13,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.data.jpa.repositories.enabled=true
 
 
-welcome.message:Property message
+#welcome.message=Property message
