--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/chambers?&serverTimezone=UTC&characterEncoding=UTF-8&useSSL=false
 
 spring.datasource.username=uatilman
-#spring.datasource.password=juDE1298
-spring.datasource.password=tefaltron#1juDE
+spring.datasource.password=juDE1298
+#spring.datasource.password=tefaltron#1juDE
 
 #spring.datasource.username=root
 #spring.datasource.password=juDE#8538tefaltron
