--- a/pom.xml
+++ b/pom.xml
@@ -9,21 +9,27 @@
     <packaging>war</packaging>
 
     <name>chamber-analysis</name>
-    <description>Demo project for Spring Boot</description>
+    <description>Study project on spring course by Geekbrains</description>
+
+    <developers>
+        <developer>
+            <name>Yuriy Tilman</name>
+            <email>uatilman@gmail.com</email>
+            <url>https://geekbrains.ru/users/1171877</url>
+        </developer>
+    </developers>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.1.0.M1</version>
-        <relativePath/> <!-- lookup parent from ru.tilman.chamberanalysis.repository -->
+        <relativePath/>
     </parent>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
-        <!--<thymeleaf.version>3.0.6.RELEASE</thymeleaf.version>-->
-        <!--<thymeleaf-layout-dialect.version>2.2.2</thymeleaf-layout-dialect.version>-->
     </properties>
 
     <dependencies>
@@ -35,22 +41,6 @@
             <version>25.1-jre</version>
         </dependency>
 
-        <!--        &lt;!&ndash; https://mvnrepository.com/artifact/org.thymeleaf/thymeleaf-spring4 &ndash;&gt;
-                <dependency>
-                    <groupId>org.thymeleaf</groupId>
-                    <artifactId>thymeleaf-spring4</artifactId>
-                    <version>${thymeleaf.version}</version>
-                </dependency>
-
-                &lt;!&ndash; https://mvnrepository.com/artifact/org.thymeleaf/thymeleaf &ndash;&gt;
-                <dependency>
-                    <groupId>org.thymeleaf</groupId>
-                    <artifactId>thymeleaf</artifactId>
-                    <version>${thymeleaf.version}</version>
-                </dependency>-->
-
-
-        <!--my code-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
@@ -106,6 +96,7 @@
     </build>
 
     <repositories>
+
         <repository>
             <id>spring-snapshots</id>
             <name>Spring Snapshots</name>
@@ -114,6 +105,7 @@
                 <enabled>true</enabled>
             </snapshots>
         </repository>
+
         <repository>
             <id>spring-milestones</id>
             <name>Spring Milestones</name>
@@ -122,9 +114,11 @@
                 <enabled>false</enabled>
             </snapshots>
         </repository>
+
     </repositories>
 
     <pluginRepositories>
+
         <pluginRepository>
             <id>spring-snapshots</id>
             <name>Spring Snapshots</name>
@@ -133,6 +127,7 @@
                 <enabled>true</enabled>
             </snapshots>
         </pluginRepository>
+
         <pluginRepository>
             <id>spring-milestones</id>
             <name>Spring Milestones</name>
@@ -141,6 +136,7 @@
                 <enabled>false</enabled>
             </snapshots>
         </pluginRepository>
+
     </pluginRepositories>
 
 
