--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,7 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.data.jpa.repositories.enabled=true
 #welcome.message=Property message
+
+
+#spring.mvc.locale=en_GB
+#spring.mvc.locale-resolver=fixed
