--- a/pom.xml
+++ b/pom.xml
@@ -22,11 +22,10 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <!--<version>2.1.0.M1</version>-->
+        <version>2.1.0.M1</version>
         <!--<version>2.0.3.RELEASE</version>-->
-        <version>2.0.2.RELEASE</version>
-
-        <!--<relativePath/>-->
+        <!--<version>2.0.2.RELEASE</version>-->
+        <relativePath/>
     </parent>
 
     <properties>
@@ -145,16 +144,6 @@
             <artifactId>annotations</artifactId>
             <version>RELEASE</version>
             <scope>compile</scope>
-        </dependency>
-
-        <!--<dependency>-->
-            <!--<groupId>org.springframework.boot</groupId>-->
-            <!--<artifactId>spring-boot-starter-tomcat</artifactId>-->
-        <!--</dependency>-->
-
-        <dependency>
-            <groupId>org.apache.tomcat.embed</groupId>
-            <artifactId>tomcat-embed-jasper</artifactId>
         </dependency>
 
         <dependency>
