--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <artifactId>chamber-analysis</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <modules>
-        <module>chambers-config</module>
+        <!--<module>chambers-config</module>-->
         <module>chambers-enterprise</module>
     </modules>
     <packaging>pom</packaging>
