--- a/chambers-config/src/main/resources/application.properties
+++ b/chambers-config/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 server.port=8888
 
-spring.cloud.config.server.git.uri=${HOME}/config/analysisconfig
+#spring.cloud.config.server.git.uri=${HOME}/config/analysisconfig
+spring.cloud.config.server.git.uri=https://github.com/uatilman/analysisconfig.git
