--- a/chambers-config/src/main/resources/application.properties
+++ b/chambers-config/src/main/resources/application.properties
@@ -1,4 +1,6 @@
+#server.application.name=chambers-server-config
 server.port=8888
 
 #spring.cloud.config.server.git.uri=${HOME}/config/analysisconfig
+spring.cloud.config.server.git.force-pull=true
 spring.cloud.config.server.git.uri=https://github.com/uatilman/analysisconfig.git
