--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,8 @@
     <modules>
         <!--<module>chambers-config</module>-->
         <module>chambers-enterprise</module>
+        <module>chambers-eureka</module>
+        <module>use-microservice</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -33,7 +35,11 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
+        <spring-cloud.version>Finchley.RELEASE</spring-cloud.version>
     </properties>
+
+        <!--<spring-cloud.version>Finchley.BUILD-SNAPSHOT</spring-cloud.version>-->
+
 
     <dependencies>
 
@@ -59,6 +65,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
         </dependency>
 
     </dependencies>
