--- a/pom.xml
+++ b/pom.xml
@@ -7,10 +7,12 @@
     <artifactId>chamber-analysis</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <modules>
-        <!--<module>chambers-config</module>-->
-        <module>chambers-enterprise</module>
+        <module>chambers-config</module>
         <module>chambers-eureka</module>
+        <module>chambers-enterprise</module>
         <module>use-microservice</module>
+        <module>chambers-proxy</module>
+
     </modules>
     <packaging>pom</packaging>
 
@@ -38,9 +40,6 @@
         <spring-cloud.version>Finchley.RELEASE</spring-cloud.version>
     </properties>
 
-        <!--<spring-cloud.version>Finchley.BUILD-SNAPSHOT</spring-cloud.version>-->
-
-
     <dependencies>
 
         <dependency>
@@ -48,12 +47,7 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
-        <!--<dependency>-->
-            <!--<groupId>org.springframework.boot</groupId>-->
-            <!--<artifactId>spring-boot-starter-web-services</artifactId>-->
-        <!--</dependency>-->
-
-        <!-- горячая подмена, выключенный кеш для шаблонов, включенный live reload -> коомментарий для ситуации с раскомментированным тегом optional -->
+       <!-- горячая подмена, выключенный кеш для шаблонов, включенный live reload -> коомментарий для ситуации с раскомментированным тегом optional -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
@@ -117,6 +111,16 @@
         </pluginRepository>
 
     </pluginRepositories>
-
+        <dependencyManagement>
+            <dependencies>
+                <dependency>
+                    <groupId>org.springframework.cloud</groupId>
+                    <artifactId>spring-cloud-dependencies</artifactId>
+                    <version>${spring-cloud.version}</version>
+                    <type>pom</type>
+                    <scope>import</scope>
+                </dependency>
+            </dependencies>
+        </dependencyManagement>
 
 </project>
